--- a/bioms.css
+++ b/bioms.css
@@ -29,3 +29,38 @@ display: flex;
 .promo_text{
 	font-size: 80px
 }
+.info{
+	padding: 50px 300px;
+}
+h2{
+	font-size: 36px;
+	text-align: center;
+	text-transform: uppercase;
+	align-items: start;
+	margin-top: 30px;
+}
+
+p{
+	text-align: justify;
+	margin-top: 30px;
+
+}
+.info_box{
+	display: flex;
+	justify-content: space-between;
+	align-items: start;
+	margin-top: 30px;
+}
+
+.info_box img{
+	width: 500px;
+	margin-right: 50px;
+}
+
+.info_box_text{
+
+}
+h3{
+	text-align: center;
+	font-size: 26px;
+}
